# fathom-vault

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  auth.py  config.py  pyproject.toml  requirements.txt
fathom-mcp/: .gitignore  CHANGELOG.md  README.md  eslint.config.js  fathom-agents.md  package-lock.json  package.json
fathom-mcp/scripts/: fathom-context.sh  fathom-precompact.sh  fathom-recall.sh  fathom-vsearch-background.sh
fathom-mcp/src/: cli.js  config.js  index.js  server-client.js  vault-ops.js
fathom-mcp/templates/: AGENT.md
fathom-mcp/test/: config.test.js  vault-ops.test.js
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  WorkspaceContext.jsx  index.css
frontend/src/components/: ActivationPanel.jsx  ActivationView.jsx  ActiveFilesPanel.jsx  CommunicationView.jsx  FileList.jsx  FileViewer.jsx  FolderTree.jsx  SearchPanel.jsx  (+5 more)
mcp/: index.js  package-lock.json  package.json
routes/: activation.py  room.py  settings.py  terminal.py  vault.py
scripts/: fathom-context.sh  fathom-precompact-snapshot.sh  fathom-vault-recall.sh  fathom-vault-start-active_files.sh  parse-transcript.sh  vsearch-background.sh
services/: access.py  crystal_scheduler.py  crystallization.py  indexer.py  links.py  memento.py  persistent_session.py  ping_scheduler.py  schema.py  settings.py  vault.py
tests/: test_access.py  test_activation_routes.py  test_auth.py  test_links.py  test_room.py  test_settings.py  test_vault_routes.py  test_vault_search.py  test_vault_service.py
(+6 files in other folders)
